[project]
name = "lightroom-s3-sync"
version = "0.1.0"
description = "Sync a local Lightroom photo directory to an S3 bucket"
requires-python = ">=3.13"
dependencies = ["boto3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["lightrooms3sync.py"]

[project.scripts]
lightroom-s3-sync = "lightrooms3sync:main"
